# workshops

./: .gitignore
workshop-module-10/: .gitignore  README.md  backend-scaffold.rs  exercise_supply_chain.rs  frontend-scaffold.jsx  solution_supply_chain.rs
workshop-module-10/university-degree-verification-backend/: .gitignore  Cargo.toml
workshop-module-10/university-degree-verification-backend/crates/identity_logic/: Cargo.toml
workshop-module-10/university-degree-verification-backend/crates/identity_logic/src/: lib.rs
workshop-module-10/university-degree-verification-backend/src/: main.rs
workshop-module-10/university-degree-verification-frontend/: index.html  package-lock.json  package.json
workshop-module-10/university-degree-verification-frontend/src/: App.jsx
workshop-module-12/Code-along-iota-notarization-backend/iota-notarization-backend/: .env.example  package-lock.json  package.json
workshop-module-12/Code-along-iota-notarization-backend/iota-notarization-backend/src/: server.ts
workshop-module-12/iota-notarization-backend/: .gitignore  Api-docs.md  Readme.md  package-lock.json  package.json  pnpm-lock.yaml
workshop-module-12/iota-notarization-backend/src/: server.ts
workshop-module-12/iota-notarization-backend/src/controllers/: notarizationController.ts
workshop-module-12/iota-notarization-backend/src/routes/: notarizationRoutes.ts
workshop-module-12/iota-notarization-backend/src/services/: notarizationService.ts  walletService.ts
workshop-module-12/iota-notarization-backend/src/utils/: crypto.ts
workshop-module-7/: README.md
workshop-module-7/token_contract/: Move.toml
workshop-module-7/token_contract/sources/: token_contract.move
workshop-module-7/token_contract/tests/: token_contract_tests.move
workshop-module-7/workshop-token-frontend/src/: App.tsx  WalletStatus.tsx  main.tsx  networkConfig.ts
workshop-module-7/workshop-token-frontend/src/components/: AdminPanel.tsx  CelebrationModal.tsx  ClaimCoupon.tsx  ClaimTokens.tsx
workshop-module-7/workshop-token-frontend/src/hooks/: useWKTContract.ts
workshop-module-7/workshop-token-frontend/src/theme/: darkTheme.ts
workshop-module-7/workshop-token-frontend/src/types/: index.ts
workshop-module-7/workshop-token-frontend/wkt-frontend/: index.html  package.json  pnpm-lock.yaml
workshop-module-7/workshop-token-frontend/wkt-frontend/src/: App.tsx  OwnedObjects.tsx  main.tsx  networkConfig.ts
workshop-module-8/voucher_shop/: Move.toml
workshop-module-8/voucher_shop/sources/: voucher_shop.move
workshop-module-8/voucher_shop/tests/: voucher_shop_tests.move
workshop-module-8/vouchershop-frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
workshop-module-8/vouchershop-frontend/src/: App.tsx  index.css  main.tsx  networkConfig.ts
workshop-module-8/vouchershop-frontend/src/AvailableVouchers/: AvailableVouchers.tsx  AvailableVouchersContent.tsx  (+1 more)
workshop-module-9/: index.html  package-lock.json  package.json  vite.config.ts
workshop-module-9.1/spark-mini-workshop/frontend/: package-lock.json  package.json  vite.config.ts
workshop-module-9.1/spark-mini-workshop/gas-station/: Cargo.toml  README.md
workshop-module-9/Extended-task/: extended-tasks.tsx
workshop-module-9/gas-station/: Cargo.toml  Makefile  README.md
workshop-module-9/gas-station/docker/: README.md  docker-compose.yml
workshop-module-9/gas-station/docs/: access-controller.md  common-issues.md
workshop-module-9/gas-station/sample_kms_sidecar/: README.md  awsUtils.ts  index.ts  package.json  tsconfig.json
workshop-module-9/gas-station/src/: command.rs  config.rs  gas_station_initializer.rs  lib.rs  metrics.rs  test_env.rs
workshop-module-9/src/: App.tsx  index.css  main.tsx
(+125 files in other folders)
